fix(index.html): contact changes

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./index.html#contact"> Contato </a>
+              <a href="./index.html#contact"> Contatooooo </a>
             </li>
           </ul>
         </div>
