fix: add whatsapp contact

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./index.html#contact"> Contatooooo </a>
+              <a href="./index.html#contact"> Contato </a>
             </li>
           </ul>
         </div>
@@ -283,6 +283,7 @@
         </h2>
 
         <div class="contacts-icons">
+          <a href = "https://api.whatsapp.com/send?phone=5512988118490" target="_blank"><img src="https://img.shields.io/badge/WhatsApp-25D366?style=for-the-badge&logo=whatsapp&logoColor=white" target="_blank"></a>
           <a href="https://www.linkedin.com/in/jonathanvinicius/" target="_blank"><img src="https://img.shields.io/badge/-LinkedIn-%230077B5?style=for-the-badge&logo=linkedin&logoColor=white" target="_blank"></a> 
                 </a>
                 <a href = "mailto:viniciusjonathan@hotmail.com"><img src="https://img.shields.io/badge/Microsoft_Outlook-0078D4?style=for-the-badge&logo=microsoft-outlook&logoColor=white" target="_blank"></a>
