--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <div class="home-hero__content">
         <h1 class="heading-primary">Oii, meu nome é Jonathan Vinicius</h1>
         <div class="home-hero__info">
-          <p class="text-primary">Desenvolvedor web Front End</p>
+          <p class="text-primary">Desenvolvedor web Full Stack</p>
         </div>
         <div class="home-hero__cta">
           <a href="./#projects" class="btn btn--bg">Projetos</a>
@@ -184,6 +184,10 @@
               <div class="skills__skill">GIT</div>
               <div class="skills__skill">CSS</div>
               <div class="skills__skill">HTML5</div>
+              <div class="skills__skill">Node.js</div>
+              <div class="skills__skill">Express.js</div>
+              <div class="skills__skill">Python</div>
+              <div class="skills__skill">Django</div>
             </div>
           </div>
         </div>
