--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="header__logo-container">
           <div class="header__logo-img-cont">
             <img
-              src="./assets/jpeg/foto.jpeg"
+              src="./assets/jpeg/foto2.jpeg"
               alt="Ram Maheshwari Logo Image"
               class="header__logo-img"
             />
