--- a/index.html
+++ b/index.html
@@ -156,11 +156,12 @@
               <p class="about__content-details-para">
                 Prazer, sou o
                 <strong>Jonathan Vinicius</strong>
-                <strong> desenvolvedor front end</strong>
-                moro em Jacareí/sp, estou finalizando meu curso de
+                <strong> desenvolvedor full stack</strong>,
+                moro em Jacareí/sp, sou formado no curso de
                 <strong
                   >desenvolvimento full stack, na Kenzie Academy Brasil</strong
                 >
+                , e estou atualmente cursando faculdade de <strong>Análise e Desenvolvimento de Sistemas</strong> pela Anhanguera de Jacareí.
               </p>
               <p class="about__content-details-para">
                 Entusiasta de tecnologia que se desenvolveu em um mundo focado
@@ -417,7 +418,7 @@
           <div class="main-footer__row main-footer__row-2">
             <h4 class="heading heading-sm text-lt">Jonathan Vinicius</h4>
             <p class="main-footer__short-desc">
-              Desenvolvedor Front End junior
+              Desenvolvedor Full Stack junior
             </p>
           </div>
         </div>
